--- a/client/src/app/components/revisions/revisions-list-and-filter/revisions-list-and-filter.component.html
+++ b/client/src/app/components/revisions/revisions-list-and-filter/revisions-list-and-filter.component.html
@@ -12,7 +12,7 @@
           *nzSpaceItem
         ></cvc-revision-list>
         <ng-container *ngrxLet="pageInfo$ as pageInfo">
-          <ng-container *ngIf="pageInfo?.hasNextPage">
+          <ng-container *ngIf="pageInfo?.hasNextPage && pageInfo.endCursor">
             <button
               nz-button
               nzBlock
