--- a/client/src/app/views/organizations/organizations-groups/organizations-groups.component.html
+++ b/client/src/app/views/organizations/organizations-groups/organizations-groups.component.html
@@ -6,7 +6,7 @@
     >
       <cvc-organization-card
         *nzSpaceItem
-        [organization]="organization"
+        [organization]="organization!"
       ></cvc-organization-card>
     </nz-space>
   </ng-container>
