--- a/client/src/app/views/releases/releases-main/releases-main.component.html
+++ b/client/src/app/views/releases/releases-main/releases-main.component.html
@@ -103,7 +103,7 @@
               <nz-table
                 #releasesTable
                 nzSize="small"
-                [nzData]="releases$ | ngrxPush"
+                [nzData]="(releases$ | ngrxPush) || []"
                 [nzLoading]="loading$ | ngrxPush"
                 [nzFrontPagination]="true"
                 [nzShowPagination]="true"
