--- a/client/src/app/components/flags/flag-list-and-filter/flag-list-and-filter.component.html
+++ b/client/src/app/components/flags/flag-list-and-filter/flag-list-and-filter.component.html
@@ -10,7 +10,7 @@
           *nzSpaceItem
         ></cvc-flag-list>
         <ng-container *ngrxLet="pageInfo$ as pageInfo">
-          <ng-container *ngIf="pageInfo?.hasNextPage">
+          <ng-container *ngIf="pageInfo?.hasNextPage && pageInfo.endCursor">
             <button
               nz-button
               nzBlock
