--- a/client/src/app/components/variant-types/variant-types-table/variant-types-table.component.html
+++ b/client/src/app/components/variant-types/variant-types-table/variant-types-table.component.html
@@ -5,21 +5,21 @@
     [nzExtra]="extraTemplate"
     nzSize="small"
     cvcAutoHeightCard
-    cvcAutoHeightTarget="viewport"
-  >
+    cvcAutoHeightTarget="viewport">
     <ng-template [ngTemplateOutlet]="table"> </ng-template>
   </nz-card>
 </ng-container>
 
 <!-- if cvcHeight is specified, render table in container w/ specified height-->
 <ng-template #setHeightCard>
-  <div class="card-container" [ngStyle]="{ height: cvcHeight }">
+  <div
+    class="card-container"
+    [ngStyle]="{ height: cvcHeight }">
     <nz-card
       [nzTitle]="titleTemplate"
       [nzExtra]="extraTemplate"
       cvcAutoHeightCard
-      nzSize="small"
-    >
+      nzSize="small">
       <ng-template [ngTemplateOutlet]="table"> </ng-template>
     </nz-card>
   </div>
@@ -30,7 +30,7 @@
   <nz-table
     #virtualTable
     nzSize="small"
-    [nzData]="row$ | ngrxPush"
+    [nzData]="(row$ | ngrxPush) || []"
     [nzLoading]="initialLoading$ | ngrxPush"
     [cvcAutoHeightTable]="25"
     [nzVirtualItemSize]="29"
@@ -38,23 +38,24 @@
     (cvcTableScrollOnScroll)="scrollEvent$.next($event)"
     [cvcTableScrollQueryRef]="queryRef"
     [cvcTableScrollPageInfo]="pageInfo$ | ngrxPush"
-    [cvcTableScrollToIndex]="scrollIndex$ | ngrxPush"
+    [cvcTableScrollToIndex]="(scrollIndex$ | ngrxPush)!"
     [nzVirtualForTrackBy]="trackByIndex"
     [nzScroll]="{ x: '680px', y: '800px' }"
     [nzFrontPagination]="false"
-    [nzShowPagination]="false"
-  >
+    [nzShowPagination]="false">
     <thead (nzSortOrderChange)="sortChange$.next($event)">
       <tr class="col-header-row">
         <th
           nzWidth="450px"
           nzLeft
           [nzColumnKey]="sortColumns.Name"
-          [nzSortFn]="true"
-        >
+          [nzSortFn]="true">
           Name
         </th>
-        <th nzWidth="100%" [nzColumnKey]="sortColumns.Soid" [nzSortFn]="true">
+        <th
+          nzWidth="100%"
+          [nzColumnKey]="sortColumns.Soid"
+          [nzSortFn]="true">
           SOID
         </th>
         <th
@@ -65,46 +66,53 @@
           [nzSortFn]="true"
           [nzSortDirections]="['descend', 'ascend', null]"
           nz-tooltip
-          nzTooltipTitle="Variant Count"
-        >
-          <i nz-icon nzType="civic-variant"></i> Count
+          nzTooltipTitle="Variant Count">
+          <i
+            nz-icon
+            nzType="civic-variant"></i>
+          Count
         </th>
       </tr>
       <tr class="filter-row">
         <th nzLeft>
           <cvc-clearable-input-filter
             [(inputModel)]="nameFilter"
-            (inputModelChange)="filterChange$.next()"
-          ></cvc-clearable-input-filter>
+            (inputModelChange)="
+              filterChange$.next()
+            "></cvc-clearable-input-filter>
         </th>
         <th>
           <cvc-clearable-input-filter
             [(inputModel)]="soidFilter"
-            (inputModelChange)="filterChange$.next()"
-          ></cvc-clearable-input-filter>
+            (inputModelChange)="
+              filterChange$.next()
+            "></cvc-clearable-input-filter>
         </th>
         <th nzRight></th>
       </tr>
     </thead>
     <tbody>
-      <ng-template nz-virtual-scroll let-vartype let-index="index">
+      <ng-template
+        nz-virtual-scroll
+        let-vartype
+        let-index="index">
         <tr class="data-row">
           <td nzLeft>
             <cvc-variant-type-tag
-              [variantType]="vartype"
-            ></cvc-variant-type-tag>
+              [variantType]="vartype"></cvc-variant-type-tag>
           </td>
           <td>
             <cvc-link-tag
               [href]="vartype.url"
-              tooltip="View on sequenceontology.org"
-            >
+              tooltip="View on sequenceontology.org">
               {{ vartype.soid }}
             </cvc-link-tag>
 
             <ng-template #noSoid> -- </ng-template>
           </td>
-          <td nzRight nzAlign="right">
+          <td
+            nzRight
+            nzAlign="right">
             {{ vartype.variantCount }}
           </td>
         </tr>
@@ -123,15 +131,19 @@
 
   <span class="table-info">
     <cvc-table-counts
-      [cvcTableCountsConnection]="connection$"
-    ></cvc-table-counts>
+      [cvcTableCountsConnection]="connection$"></cvc-table-counts>
   </span>
 </ng-template>
 
 <!-- card's extra template -->
 <ng-template #extraTemplate>
-  <nz-tag *ngIf="moreLoading$ | ngrxPush" nzColor="processing">
-    <i nz-icon nzType="sync" nzSpin></i>
+  <nz-tag
+    *ngIf="moreLoading$ | ngrxPush"
+    nzColor="processing">
+    <i
+      nz-icon
+      nzType="sync"
+      nzSpin></i>
     <span>Loading…</span>
   </nz-tag>
   <cvc-no-more-rows [cvcShowTag]="noMoreRows$ | ngrxPush"></cvc-no-more-rows>
