--- a/client/src/app/views/organizations/organizations-members/organizations-members.component.html
+++ b/client/src/app/views/organizations/organizations-members/organizations-members.component.html
@@ -3,19 +3,16 @@
     <nz-space nzSize="middle" nzDirection="vertical" class="space-align-block">
       <div nz-row [nzGutter]="[16, 16]" *nzSpaceItem>
         <div *ngFor="let member of members$ | ngrxPush" nz-col [nzSpan]="6">
-          <cvc-user-card [user]="member"></cvc-user-card>
+          <cvc-user-card *ngIf="member" [user]="member"></cvc-user-card>
         </div>
       </div>
       <!-- Load More button row -->
       <ng-container *nzSpaceItem>
         <ng-container *ngrxLet="pageInfo$ as pageInfo">
-          <ng-container *ngIf="pageInfo.hasNextPage">
-            <button
-              *ngIf="pageInfo.hasNextPage"
-              (click)="loadMore(pageInfo.endCursor)"
-              nz-button
-              nzBlock
-            >
+          <ng-container
+            *ngIf="pageInfo && pageInfo.hasNextPage && pageInfo.endCursor"
+          >
+            <button (click)="loadMore(pageInfo.endCursor)" nz-button nzBlock>
               Load {{ this.initialPageSize }} More
             </button>
           </ng-container>
